--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script>
       async function ask() {
         const input = document.getElementById("input").value;
-        const response = await fetch("https://your-vercel-api-url/chat", {
+        const response = await fetch("/api/chat", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ message: input })
