Update index.html as widget

--- a/index.html
+++ b/index.html
@@ -6,93 +6,79 @@
   <title>Axons One Chatbot</title>
   <style>
     body {
+      margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #f4f7fa;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: start;
-      padding: 40px 20px;
-      color: #333;
     }
 
     .chatbox {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 340px;
+      max-height: 500px;
       background: white;
       border-radius: 16px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      max-width: 600px;
-      width: 100%;
-      padding: 20px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.2);
+      padding: 16px;
+      display: flex;
+      flex-direction: column;
+      z-index: 9999;
     }
 
-    h2 {
+    h4 {
+      margin: 0 0 12px 0;
       color: #3f51b5;
-      margin-bottom: 20px;
-      text-align: center;
     }
 
     textarea {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
       resize: vertical;
-      min-height: 80px;
-      font-size: 16px;
+      min-height: 60px;
+      padding: 8px;
+      font-size: 14px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
     }
 
     button {
-      background: #3f51b5;
-      color: white;
+      margin-top: 8px;
+      padding: 8px 12px;
       border: none;
       border-radius: 8px;
-      padding: 10px 16px;
-      font-size: 16px;
-      margin-top: 12px;
+      background: #3f51b5;
+      color: white;
       cursor: pointer;
-      transition: background 0.2s;
-    }
-
-    button:hover {
-      background: #303f9f;
     }
 
     .response {
-      margin-top: 16px;
-      background: #f1f1ff;
-      border-left: 4px solid #3f51b5;
-      padding: 12px;
-      border-radius: 8px;
-      font-size: 15px;
-    }
-
-    @media (max-width: 600px) {
-      body {
-        padding: 20px 10px;
-      }
+      margin-top: 12px;
+      background: #f5f5ff;
+      padding: 8px;
+      border-left: 3px solid #3f51b5;
+      border-radius: 6px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
   <div class="chatbox">
-    <h2>🤖 Axons One AI Assistant</h2>
-    <textarea id="input" placeholder="Type your question here..."></textarea>
+    <h4>Ask Axons One AI</h4>
+    <textarea id="input" placeholder="Type your question..."></textarea>
     <button onclick="ask()">Send</button>
-    <div class="response" id="output">Waiting for your message...</div>
+    <div class="response" id="output">Ready to help you!</div>
   </div>
 
   <script>
     async function ask() {
       const inputEl = document.getElementById("input");
       const outputEl = document.getElementById("output");
-      const userMessage = inputEl.value.trim();
-      if (!userMessage) return;
+      const message = inputEl.value.trim();
+      if (!message) return;
 
       outputEl.textContent = "Thinking...";
       const response = await fetch("/api/chat", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ message: userMessage })
+        body: JSON.stringify({ message })
       });
       const data = await response.json();
       outputEl.textContent = data.reply || "No response.";
