--- a/index.html
+++ b/index.html
@@ -6,82 +6,102 @@
   <title>Axons One Chatbot</title>
   <style>
     body {
-      margin: 0;
       font-family: 'Segoe UI', sans-serif;
+      background: #f8fafc;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+    }
+
+    .container {
+      max-width: 800px;
+      width: 100%;
+      padding: 40px 20px;
     }
 
     .chatbox {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      width: 340px;
-      max-height: 500px;
       background: white;
       border-radius: 16px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.2);
-      padding: 16px;
-      display: flex;
-      flex-direction: column;
-      z-index: 9999;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+      padding: 24px;
+      margin-top: 40px;
     }
 
-    h4 {
-      margin: 0 0 12px 0;
+    h2 {
+      text-align: center;
       color: #3f51b5;
+      margin-bottom: 20px;
     }
 
     textarea {
-      resize: vertical;
-      min-height: 60px;
-      padding: 8px;
-      font-size: 14px;
+      width: 100%;
+      padding: 12px;
+      font-size: 16px;
       border-radius: 8px;
       border: 1px solid #ccc;
+      resize: vertical;
+      min-height: 100px;
     }
 
     button {
-      margin-top: 8px;
-      padding: 8px 12px;
-      border: none;
-      border-radius: 8px;
+      margin-top: 16px;
+      padding: 10px 16px;
       background: #3f51b5;
       color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
       cursor: pointer;
     }
 
+    button:hover {
+      background: #303f9f;
+    }
+
     .response {
-      margin-top: 12px;
-      background: #f5f5ff;
-      padding: 8px;
-      border-left: 3px solid #3f51b5;
-      border-radius: 6px;
-      font-size: 14px;
+      margin-top: 20px;
+      background: #f1f3ff;
+      padding: 16px;
+      border-left: 4px solid #3f51b5;
+      border-radius: 8px;
+      font-size: 16px;
+      white-space: pre-wrap;
+    }
+
+    @media (max-width: 600px) {
+      .container {
+        padding: 20px 10px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="chatbox">
-    <h4>Ask Axons One AI</h4>
-    <textarea id="input" placeholder="Type your question..."></textarea>
-    <button onclick="ask()">Send</button>
-    <div class="response" id="output">Ready to help you!</div>
+  <div class="container">
+    <div class="chatbox">
+      <h2>🤖 Ask Axons One</h2>
+      <textarea id="input" placeholder="Type your question here..."></textarea>
+      <button onclick="ask()">Send</button>
+      <div class="response" id="output">Ready when you are.</div>
+    </div>
   </div>
 
   <script>
     async function ask() {
-      const inputEl = document.getElementById("input");
-      const outputEl = document.getElementById("output");
-      const message = inputEl.value.trim();
-      if (!message) return;
+      const input = document.getElementById("input").value.trim();
+      const output = document.getElementById("output");
 
-      outputEl.textContent = "Thinking...";
+      if (!input) return;
+
+      output.textContent = "Thinking...";
       const response = await fetch("/api/chat", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ message })
+        body: JSON.stringify({ message: input })
       });
+
       const data = await response.json();
-      outputEl.textContent = data.reply || "No response.";
+      output.textContent = data.reply || "No response.";
     }
   </script>
 </body>
